appId: y
---
- launchApp
- assertVisible: "Lotteries"
- tapOn:
    id: add_lottery_FAB
- tapOn: "Lottery Name"
- inputText: "Maestro e2e Lottery"
- tapOn: "Lottery Prize"
- inputText: "3000"
- tapOn: "Add"
- scrollUntilVisible:
    element: "Maestro e2e Lottery"
    direction: DOWN
- assertVisible: "Maestro e2e Lottery"